# libvuptsdk

./: .gitignore  AUDIT.md  BENCHMARKS.md  CHANGELOG.md  CT_VERIFICATION.md  LICENSE  MLKEM_CONFORMANCE_FIX.md  Makefile  README.md  SECURITY.md  zuptsdk.map
bench/: bench_throughput.c
bindings/rust/: Cargo.toml  build.rs
bindings/rust/src/: lib.rs
conformance-suite/: README.md  build_kd.sh  differential_kyberpy.py  kat_mlkem768_acvp.c  kd_helper.c  run_kats.py  vectors_encapdecap_mlkem768.json  vectors_keygen_mlkem768.json
doc/: API_REFERENCE.md  TROUBLESHOOTING.md  example.c
include/: vaptvupt.h  vaptvupt_api.h  vv_ans.h  vv_huffman.h  vv_platform.h  zsdk_aes256_gcm_siv.h  zsdk_aes256_siv.h  zsdk_argon2id.h  zsdk_blake2b.h  zsdk_hkdf.h  zsdk_xchacha20_poly1305.h  zupt.h  zupt_acsl.h  zupt_cpuid.h  zupt_jasmin.h  zupt_keccak.h  zupt_mlkem.h  zupt_x25519.h  zuptsdk.h  zuptsdk.hpp  zuptsdk_easy.h  zuptsdk_metrics.h
jasmin/: zupt_aes_ctr.jazz  zupt_aes_ctr.s  zupt_aes_ctr4.jazz  zupt_aes_ctr4.s  zupt_mac_verify.jazz  zupt_mac_verify.s  zupt_mlkem_select.jazz  zupt_mlkem_select.s  zupt_x25519_fe.jazz  zupt_x25519_fe.s
packaging/: build-deb.sh  build-rpm.sh
prebuilt/: libvuptsdk.so.2  libvuptsdk.so.2.0.3  libzuptsdk.so.2  libzuptsdk.so.2.0.0
src/: vaptvupt_api.c  vv_ans.c  vv_decoder.c  vv_encoder.c  vv_huffman.c  vv_simd.c  vv_xxh64.c  zupt_aes256.c  zupt_cpuid.c  zupt_crypto.c  zupt_dedup.c  zupt_disk.c  zupt_filetype.c  zupt_format.c  zupt_keccak.c  zupt_lz.c  zupt_lzh.c  zupt_mlkem.c  zupt_mlock.c  zupt_parallel.c  zupt_parallel.h  zupt_predict.c  (+6 more)
(+33 files in other folders)
